manifests/moomboo.space/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-kubeconfig
spec:
  selector:
    matchLabels:
      app: example-kubeconfig-nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: example-kubeconfig-nginx
    spec:
      containers:
      - name: nginx
        image: img.hephy.pro/examples/howto-kubeconfig:serve # build
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: html
      volumes:
      - name: html
        emptyDir:
          sizeLimit: 100Mi
