manifests/moomboo.space/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-kubeconfig
spec:
  selector:
    app: example-kubeconfig-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
